# dasbootstrap

./: .ansible-lint  .cruft.json  .editorconfig  .gitattributes  .gitignore  .gitmodules  .pre-commit-config.yaml  .pylintrc  Dockerfile  README.md  Taskfile.bak  Taskfile.yaml  Taskfile.yml  ansible.cfg  dasbootstrap  dbs  docker-compose.yml  pyproject.toml  taskfile.yaml  tox.ini  workspace.toml
.debops/: environment
.debops/conf.d/: project.yml  view-system.yml
.devcontainer/: devcontainer.json  install.sh
.git-crypt/keys/default/0/: 20A22D1CA4ED786EE1D6B880EAB89561CF2634D5.gpg
.github/linters/: .ansible.yaml  .markdownlint.yaml  .yamllint.yaml
.github/workflows/: test.yml
.taskfiles/: ansible.yaml  build.yaml  buildx.yaml  format.yaml  inventory.yaml  lint.yaml  precommit.yaml
ansible/: Taskfile.yml  ansible.cfg  site.yaml
ansible-keepass/: pyproject.toml
ansible/collections/: requirements.yml
ansible/collections/ansible_collections/: proxmox-ansible.7z  technohouser.7z
ansible/collections/ansible_collections/proxmox-ansible/: CHANGELOG.md
ansible/collections/technohouser/com/: README.md  galaxy.yml
ansible/inventory/: hosts.yaml  inventory.yaml  sqlite.yaml
ansible/inventory/group_vars/: all.yml
ansible/inventory/host_vars/: lxc.example  sample-lxc.yml  sample-qemu.yml  semaphore.yml
ansible/molecule/default/: common.yaml  converge.yml  create.yml  destroy.yml
ansible/playbooks/: apps.yaml  common.yaml  debian_kvm_bootstrap.yaml  debian_lxc_bootstrap.yaml
ansible/playbooks/applications/: caddy.yaml  docker.yaml  gitea.yaml  harbor.yaml  pypi.yaml  semaphore.yaml  technitium.yaml  zoraxy.yaml
ansible/playbooks/maintainence/: apt-cache-ng.yaml  apt-update.yaml  casaos-update.yaml  pkg-update.yaml  proxmox_node_updates.yaml  update-netdata.yaml
ansible/playbooks/maintenance/: proxmox.yaml  update_running_lxcs.yaml
ansible/playbooks/provision_lxc/: common.yaml
ansible/playbooks/setup/: ansible-controller.yaml  create-lxc.yaml
ansible/roles/: requirements.yaml  requirements.yml
ansible/roles/GROG.package/meta/: .galaxy_install_info
ansible/roles/add_user_layer/defaults/: main.yml
ansible/roles/add_user_layer/handlers/: main.yml
ansible/roles/destroy_lxc/vars/: main.yml
ansible/views/system/: .gitattributes
bases/dasbootstrap/automation_station/: Home.py  __init__.py
bases/dasbootstrap/chrome_kiosk/: __init__.py  __main__.py  chrome.py  chrome_kiosk.py  core.py
bases/dasbootstrap/dasbootstrap/: __init__.py  core.py
bases/dasbootstrap/inventory/: __init__.py  cli.py
bases/dasbootstrap/paramiko_client/: __init__.py  core.py
bases/dasbootstrap/proximate_utils/: __init__.py  actions.py  info.py  main.py  resources.py  version.py
bases/dasbootstrap/semaphore_client/: README.md  __init__.py  semaphore_client.py
bases/dasbootstrap/technitium_client/: __init__.py  technitium_client.py
components/dasbootstrap/abc/: core.py
components/dasbootstrap/ansible/: __init__.py  core.py
components/dasbootstrap/docker/: __init__.py
components/dasbootstrap/files/: __init__.py  core.py
components/dasbootstrap/inventory/: __init__.py  core.py  watchyourlan.py
components/dasbootstrap/keegen/: __init__.py  core.py
components/dasbootstrap/log/: __init__.py  core.py
components/dasbootstrap/paths/: __init__.py  core.py
components/dasbootstrap/resources/: __init__.py  ansible.py  core.py
components/dasbootstrap/ssh/: __init__.py  core.py
components/dasbootstrap/trapper_keeper/: core.py  tk.py
dasbootstrap/: main.py
dasbootstrap/ansible_actions/: ansible_actions.py
dasbootstrap/dasbootstrap/: containers.py  dasmenu.py  utils.py
dasbootstrap/dasbootstrap_actions/: __init__.py  ansible_actions.py  database_actions.py  paths.py  resources.py  technitium_dns_client.py
dasbootstrap/tests/: ansible_actions_test.py  utils_test.py
development/: inventory_cli.py  launch_kiosk.py  unified_inventory.py
lib/: ansible_commands.sh  constants.sh  functions.sh  install_doctor_functions.sh  logger.sh  logging.sh  shell_functions.sh  task_functions.sh  util_functions.sh
pages/: Trapper_Keeper.py
projects/automation_station/: pyproject.toml
projects/birthday_reminder/: pyproject.toml
projects/dasbootstrap/: pyproject.toml
projects/kiosk/: pyproject.toml
pyprojects/: Taskfile.yml
pyprojects/chrome_kiosk/: __init__.py  __main__.py  chrome.py  pyproject.toml
pyprojects/dasbootstrap/: .cruft.json  Dockerfile  README.md  __init__.py  __main__.py  ansible_commands.py  docker-compose.yml  pyproject.toml
pyprojects/dasbootstrap/src/: __init__.py
pyprojects/dasbootstrap/tests/: test_utils.py
pyprojects/proximate_utils/: actions.py
pyprojects/reports/: pytest.xml
pyprojects/semaphore_client/: .cruft.json  Dockerfile  README.md  __init__.py  docker-compose.yml  poetry.toml  pyproject.toml  semaphore_client.py
pyprojects/semaphore_client/src/: __init__.py
pyprojects/semaphore_client/tests/: __init__.py  test_semaphore_client.py
pyprojects/technitium_client/: __init__.py  pyproject.toml  technitium_client.py
pyprojects/technitium_client/src/: __init__.py
pyprojects/technitium_client/src/technitium_client/: technitium_client.py
pyprojects/trapper_keeper/: tk.py
reports/: pytest.xml
shared/: __init__.py
shared/config/: utils.py
shared/config/resources/: paths.py
shared/config/templates/: __init__.py
shared/pages/: Trapper_Keeper.py
shared/tests/: test_ssh.py
shared/utils/: file.py  keegen.py  paths.py  pyproject.toml  ssh.py  types.py
shared/utils/inventory/: ansible_inventory.py
test/dasbootstrap/inventory/: inventory_generator.py  test_core.py  test_functional.py
test/dasbootstrap/keegen/: test_core.py
test/dasbootstrap/paramiko_client/: test_core.py
test/dasbootstrap/resources/: test_core.py
test/dasbootstrap/trapper_keeper/: test_trapper_keeper.py
tests/: test_inventory.py  test_semaphore_client.py  test_trapper_keeper.py  test_utils.py
tests/integrations/: test_integration.py
tests/proximate_utils/: test_actions.py  test_proximate_utils.py
tests/reports/: pytest.xml
(+120 files in other folders)
