[tool.poetry]
name = "automation_station"
version = "0.1.0"
description = ""
authors = ["Jeremy Hettenhouser <jhettenh@gmail.com>"]
license = "MIT"

packages = [
    {include = "dasbootstrap/automation_station", from = "../../bases"},
    {include = "dasbootstrap/resources", from = "../../components"},
    {include = "dasbootstrap/trapper_keeper", from = "../../components"},
    {include = "dasbootstrap/keegen",from = "../../components"},
]

[tool.poetry.dependencies]
python = "^3.12"
streamlit = "^1.36.0"
streamlit-extras = "^0.4.3"
boltdb = "^0.0.2"
pykeepass = "^4.1.0"
xdg-base-dirs = "^6.0.1"
xkcdpass = "^1.19.9"
zstandard = "^0.22.0"
watchdog = "^4.0.1"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
