[tool.poetry]
  authors = ["Jeremy Hettenhouser <jhettenh@gmail.com>"]
  description = ""
  license = "MIT"
  name = "dasbootstrap"
  version = "0.3.4"

  packages = [
    { include = "dasbootstrap/automation_station", from = "../../bases" },
    { include = "dasbootstrap/dasbootstrap", from = "../../bases" },
    { include = "dasbootstrap/chrome_kiosk", from = "../../bases"},
    { include = "dasbootstrap/inventory", from = "../../bases"},
    { include = "dasbootstrap/trapper_keeper", from = "../../components" },
    { include = "dasbootstrap/ssh", from = "../../components" },
    { include = "dasbootstrap/ansible", from = "../../components" },
    { include = "dasbootstrap/resources", from = "../../components" },
    { include = "dasbootstrap/keegen", from = "../../components" },
    { include = "dasbootstrap/inventory", from = "../../components"},
  ]

[tool.poetry.dependencies]
  ansible-runner = "^2.4.0"
  boltdb = "^0.0.2"
  components = "^1.2.8"
  pandas = "^2.2.2"
  paramiko = "^3.4.0"
  plumbum = "^1.8.3"
  pykeepass = "^4.1.0"
  python = "^3.12"
  streamlit = "^1.36.0"
  streamlit-extras = "^0.4.3"
  typer = "^0.12.3"
  xdg-base-dirs = "^6.0.1"
  xkcdpass = "^1.19.9"
  zstandard = "^0.22.0"

[build-system]
  build-backend = "poetry.core.masonry.api"
  requires = ["poetry-core>=1.0.0"]
