[tool.poetry]
  authors = ["Jeremy Hettenhouser <jhettenh@gmail.com>"]
  description = "Open up a url in a chrome browser and periodically refresh"
  license = "MIT"
  name = "chrome-kiosk"
  packages = [{ include = "*.py", from = "." }]
  readme = "README.md"
  version = "0.1.0"

[tool.poetry.dependencies]
  playwright = "^1.45.0"
  python = "^3.12"
  utils = { path = "../../shared/utils/" }
pynput = "^1.7.7"
undetected-playwright = "^0.3.0"


[build-system]
  build-backend = "poetry.core.masonry.api"
  requires = ["poetry-core"]
