[tool.poetry]
name = "technitium-client"
version = "0.1.0"
description = "Implements the tdnss api library to connect to technitium dns server"
authors = ["Jeremy Hettenhouser <jhettenh@gmail.com>"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
tdnss = "^0.2.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
