[tool.poetry]
  authors = ["Jeremy Hettenhouser <jhettenh@gmail.com>"]
  description = "Utility functions for Dasbootstrap"
  license = "MIT"
  name = "utils"
  packages = [
    { include = "*", from = "inventory" },
    { include = "*.py", from = "." },
  ]
  readme = "README.md"
  version = "0.1.0"

[tool.poetry.dependencies]
  python = "^3.12"


[build-system]
  build-backend = "poetry.core.masonry.api"
  requires = ["poetry-core"]
